UI change Matrimony App

--- a/matrimony_app/web/index.html
+++ b/matrimony_app/web/index.html
@@ -18,7 +18,7 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="This application can be used by a single person/matrimonial service company for matrimonial business to  maintain records in an electronic format. The owner of the matrimonial service company will use this  application to replace pen & paper with this flutter mobile application.">
+  <meta name="description" content="This application can be used by a single person/matrimonial service company for matrimonial business to maintain records in an electronic format. The owner of the matrimonial service company will use this application to replace pen & paper with this flutter mobile application.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -27,6 +27,7 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
+  <link rel="icon" type="image/png" href="main_icon.png"/>
   <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>matrimony_app</title>
